src/objects/ApexCalloutLog__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account record related to callout</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Service Provider Logs</relationshipLabel>
        <relationshipName>Apex_Callout_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <description>Number of callouts made before success or failure</description>
        <inlineHelpText>Number of callouts made before success or failure</inlineHelpText>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_Status__c</fullName>
        <description>These are technical statuses that may be translated via the translation workbench to allow user friendly results to be displayed</description>
        <inlineHelpText>The result of a callout request</inlineHelpText>
        <label>Callout Status</label>
        <picklist>
            <picklistValues>
                <fullName>NOT_SENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO_RESPONSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO_DATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProduct</label>
        <referenceTo>CaseProduct__c</referenceTo>
        <relationshipLabel>Apex Callout Logs</relationshipLabel>
        <relationshipName>Apex_Callout_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case record related to callout</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Apex Callout Logs</relationshipLabel>
        <relationshipName>Apex_Callout_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Service Product record related to callout</description>
        <label>Customer Service Product</label>
        <referenceTo>Customer_Service_Product__c</referenceTo>
        <relationshipLabel>Apex Callout Logs</relationshipLabel>
        <relationshipName>Apex_Callout_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Clear text error code. Codes are defined by each service on the format service_errorcode e.g. CH_MULTIPLEROWS for Companies House search service where more than one company is found in a search.</description>
        <inlineHelpText>Clear text error code. Codes are defined by each service on the format service_errorcode e.g. CH_MULTIPLEROWS for Companies House search service where more than one company is found in a search.</inlineHelpText>
        <label>Error Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>These are technical error types that may be translated via the translation workbench to allow user friendly results to be displayed</description>
        <inlineHelpText>The type of error, if any.</inlineHelpText>
        <label>Error Type</label>
        <picklist>
            <picklistValues>
                <fullName>GENERIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHNICAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Initiated__c</fullName>
        <label>Request Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Message__c</fullName>
        <label>Request Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Final__c</fullName>
        <label>Response: Final Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Initial_Response__c</fullName>
        <label>Response: Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Error_Code__c</fullName>
        <description>These are technical error types that may be translated via the translation workbench to allow user friendly results to be displayed</description>
        <inlineHelpText>These are technical error types that may be translated via the translation workbench to allow user friendly results to be displayed</inlineHelpText>
        <label>System Error Code</label>
        <picklist>
            <picklistValues>
                <fullName>SERVICE_DISABLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALLOUT_FAILURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERMANENT_CALLOUT_FAILURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO_CREDENTIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISSING_PARAMETERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISSING_ENDPOINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISSING_HOST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISSING_SERVICENAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISSING_PROVIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIMEOUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERMANENT_TIMEOUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAPPING_ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE_TYPE_NOT_SUPPORTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNKNOWN_ERROR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Callout_Time_in_sec__c</fullName>
        <formula>(VALUE( MID( TEXT( Response_Final__c  ), 15, 2 ) ) - VALUE( MID( TEXT(  Request_Initiated__c ), 15, 2 ) ))*60

+

(VALUE( MID( TEXT( Response_Final__c ), 18, 2 ) ) - VALUE( MID( TEXT( Request_Initiated__c ), 18, 2 ) ) )</formula>
        <label>Total Callout Time in sec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <description>Related Record Id</description>
        <inlineHelpText>Related Record Id</inlineHelpText>
        <label>What</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Apex Callout Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WhatId__c</columns>
        <columns>Source__c</columns>
        <columns>Response_Initial_Response__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Response_Final__c</columns>
        <columns>Request_Initiated__c</columns>
        <columns>Request_Message__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Response_Final__c</columns>
        <columns>Total_Callout_Time_in_sec__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Error_Code__c</field>
            <operation>notEqual</operation>
            <value>USR,invalidIdentifier,E</value>
        </filters>
        <label>Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MOD</fullName>
        <columns>NAME</columns>
        <columns>WhatId__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Request_Initiated__c</columns>
        <columns>Request_Message__c</columns>
        <columns>Response_Final__c</columns>
        <columns>Response_Initial_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>MOD</value>
        </filters>
        <label>MOD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NTT</fullName>
        <columns>NAME</columns>
        <columns>WhatId__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Request_Initiated__c</columns>
        <columns>Request_Message__c</columns>
        <columns>Response_Final__c</columns>
        <columns>Response_Initial_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>NTT</value>
        </filters>
        <label>NTT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PAR_Account</fullName>
        <columns>NAME</columns>
        <columns>WhatId__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Request_Initiated__c</columns>
        <columns>Request_Message__c</columns>
        <columns>Response_Final__c</columns>
        <columns>Response_Initial_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>PAR_Account</value>
        </filters>
        <label>PAR_Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>VAP</fullName>
        <columns>NAME</columns>
        <columns>WhatId__c</columns>
        <columns>Source__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Request_Initiated__c</columns>
        <columns>Request_Message__c</columns>
        <columns>Response_Final__c</columns>
        <columns>Response_Initial_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>VAP</value>
        </filters>
        <label>VAP</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ApexCallout-{0}</displayFormat>
        <label>Apex Callout Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>